typos corrected - skills section reworded - hover removed from socials

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
           </div>
           <h3>HTML 5</h3>
         </div>
-        <p>'DRY', semantic HTML code, clear naming conventions and correctly indented code enables me to write readable and maintainable
-          code on my project builds.</p>
+        <p>HTML is the foundation of any web page. I write semantic HTML is aid readability and assist in SEO, as well as correctly structing my tags to enable styling to be applied efficiently.</p>
       </div>
       <div class="skill-box">
         <div class="skill-title">
@@ -132,8 +131,7 @@
           </div>
           <h3>CSS</h3>
         </div>
-        <p>Correctly structured HTML allows me to target multiple pieces of code with one selector. Using sass has also
-          nabled ested and helped me avoid duplication in my applications' styling.</p>
+        <p>Correctly structured HTML allows me to target multiple pieces of code with one selector. Using SCSS also allows me to nest when styling, and helped me avoid duplication in my applications.</p>
       </div>
       <div class="skill-box">
         <div class="skill-title">
@@ -143,8 +141,7 @@
           <h3>JavaScript</h3>
         </div>
         <p>I have worked on several projects using both vanilla JavaScript, as well as projects that incorporate
-          libraries such as jQuery. Using ES6 syntax and clealry labelled functions enables me to maintain my codebase,
-          and enables any developer to look at my file and understand it easily.</p>
+          libraries such as jQuery. Using ES6 syntax and clealry labelled, self-contained functions enables other developers on my team to easily understand my code.</p>
       </div>
       <div class="skill-box">
         <div class="skill-title">
@@ -153,7 +150,7 @@
           </div>
           <h3>Angular</h3>
         </div>
-        <p>I have learnt the fundamentals of the Angular framework and built components within it to undrstand the benefits/drawbacks of using it.</p>
+        <p>I have learnt the fundamentals of the Angular framework and built components within it to understand why companies choose to use it over other frameworks.</p>
       </div>
       <div class="skill-box">
         <div class="skill-title">
@@ -162,7 +159,7 @@
           </div>
           <h3>React</h3>
         </div>
-        <p>I have worked on multiple projects using the React framework, using professional folder structure and
+        <p>I have worked on multiple projects using the React library, using professional folder structure and
           component based development to create modern single-page-applications.</p>
       </div>
       <div class="skill-box">
@@ -189,7 +186,7 @@
       <article id="p1">
         <div class=project-boxes>
           <h3>Pokedex</h3>
-          <p>This project was produced in week 7 of the nology course and pulls data from firestore (firebase databse). The user can type input and matching pokemon are returned.</p>
+          <p>This project was produced in week 7 of the nology course and pulls data from firestore (firebase database). The user can type input and matching pokemon are returned.</p>
           <p>HTML | CSS/SCSS | JavaScript | React | Firebase | Search Functionality</p>
           <a href="https://github.com/sam-joyce/pokemon" target="_blank"><i class="far fa-file-code"></i></a>
           <a href="https://sam-joyce.github.io/pokemon/" target="_blank"><i class="fab fa-chrome"></i></a>
@@ -208,7 +205,7 @@
       <article id="p3">
         <div class=project-boxes>
           <h3>Minesweeper</h3>
-          <p>Comleted in week 5 of the nology course after I was challenged to complete a game of my choosing with my new found JavaScript skills. The board is dynamically rendered using a JS function, and bombs are randomly assigned across the board. A recursive function checks cells surrounding the users 'click'.</p>
+          <p>Completed in week 5 of the nology course after I was challenged to complete a game of my choosing with my new found JavaScript skills. The board is dynamically rendered using a JS function, and bombs are randomly assigned across the board. A recursive function checks cells surrounding the users 'click'.</p>
           <p>HTML | CSS/SCSS | JavaScript</p>
           <a href="https://github.com/sam-joyce/minesweeper" target="_blank"><i class="far fa-file-code"></i></a>
           <a href="https://sam-joyce.github.io/minesweeper/" target="_blank"><i class="fab fa-chrome"></i></a>
@@ -255,23 +252,23 @@
     <div class="box-around">
       <div class="item">
         <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
-        <h4>Week 1</h4>
-        <p>GitHub, git, HTML and CSS.</p>
+        <h4>Week 1: Holy git!</h4>
+        <p>The 'foundations'... GitHub, git, HTML and CSS.</p>
       </div>
       <div class="item">
         <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
-        <h4>Week 2</h4>
+        <h4>Week 2: Weird flex but ok.</h4>
         <p>CSS best practice, flex and grid, as well as SCSS for cleaner styling.</p>
       </div>
       <div class="item">
         <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
-        <h4>Week 3</h4>
-        <p>Javascript (introduced to 'ifs' and 'loops').</p>
+        <h4>Week 3: Things that are impossible just take longer.</h4>
+        <p>Javascript (introduced to 'ifs', 'loops' and 'functions').</p>
       </div>
       <div class="item">
         <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
-        <h4>Week 4</h4>
-        <p>A break from coding?! This week... soft skills.</p>
+        <h4>Week 4: Really..?! No coding this week?</h4>
+        <p>This week... soft skills. Stress management, conflict resolution, productivity... you name it!</p>
       </div>
     </div>
   </section>
