--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <h3>HTML 5</h3>
         </div>
-        <p>HTML is the foundation of any web page. I write semantic HTML is aid readability and assist in SEO, as well as correctly structing my tags to enable styling to be applied efficiently.</p>
+        <p>HTML is the foundation of any web page. I write semantic HTML which helps readability and assist in SEO, as well as correctly structing my tags to enable styling to be applied efficiently.</p>
       </div>
       <div class="skill-box">
         <div class="skill-title">
