changed para above YT section to say coming soon once edited

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <div class="YT-title">
       <h1>YouTube</h1>
     </div>
-    <p id="YT-intro">I completed a series of YouTube videos documenting my journey to becoming a developer in 12 weeks. Follow along below...</p>
+    <p id="YT-intro">I completed a series of YouTube videos documenting my journey to becoming a developer in 12 weeks. I am currently learning how to edit these and they will be uploaded soon.</p>
 
     <div class="box-around">
       <div class="item">
