update to skills(agile/python) and projects(covid tracker) section

--- a/index.html
+++ b/index.html
@@ -118,20 +118,20 @@
       <div class="skill-box">
         <div class="skill-title">
           <div class="img">
-            <img src="./images/html5.png" alt="HTML Icon" class="skill-icon">
+            <img src="./images/agile.jpg" alt="Agile Icon" class="skill-icon">
           </div>
-          <h3>HTML 5</h3>
+          <h3>Agile</h3>
         </div>
-        <p>HTML is the foundation of any web page. I write semantic HTML which helps readability and assist in SEO, as well as correctly structing my tags to enable styling to be applied efficiently.</p>
+        <p>I have worked in, and managed a development team, in a agile delivery system. Daily scrums, and weekly deliveries allowed us to present multiple iterations to the product owner and deliver all the requested features.</p>
       </div>
       <div class="skill-box">
         <div class="skill-title">
           <div class="img">
-            <img src="./images/css.png" alt="CSS Icon" class="skill-icon">
+            <img src="./images/python.jpg" alt="Python Icon" class="skill-icon">
           </div>
-          <h3>CSS</h3>
+          <h3>Python</h3>
         </div>
-        <p>Correctly structured HTML allows me to target multiple pieces of code with one selector. Using SCSS also allows me to nest when styling, and helped me avoid duplication in my applications.</p>
+        <p>I have began to learn Python in my spare time in order to further my understanding and interest in automation and Machine Learning. I have started understanding the syntax and am starting to build more complex projects.</p>
       </div>
       <div class="skill-box">
         <div class="skill-title">
@@ -185,11 +185,11 @@
     <div id="wrapper">
       <article id="p1">
         <div class=project-boxes>
-          <h3>Pokedex</h3>
-          <p>This project was produced in week 7 of the nology course and pulls data from firestore (firebase database). The user can type input and matching pokemon are returned.</p>
-          <p>HTML | CSS/SCSS | JavaScript | React | Firebase | Search Functionality</p>
-          <a href="https://github.com/sam-joyce/pokemon" target="_blank"><i class="far fa-file-code"></i></a>
-          <a href="https://sam-joyce.github.io/pokemon/" target="_blank"><i class="fab fa-chrome"></i></a>
+          <h3>Covid-19 Tracker</h3>
+          <p>This is a live tracker of the latest UK Covid-19 stats, updating every 12 hours. The additional feature I am working on is using 'Mapbox' to display a map with coloured markers depending on the number of cases.</p>
+          <p>HTML | CSS/SCSS | JavaScript | API's | Mapbox</p>
+          <a href="https://github.com/sam-joyce/covid-tracker" target="_blank"><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/covid-tracker/" target="_blank"><i class="fab fa-chrome"></i></a>
         </div class=project-boxes>
       </article>
       <article id="p2">
